# fpsample

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs  build_info.rs  pyproject.toml  requirements.txt
.github/workflows/: CI.yml  release.yml  test.yml
bench/: test_bench.py
python/fpsample/: wrapper.py
src/: lib.cpp  lib.rs  wrapper.hpp
src/_ext/: Interval.h  KDLineTree.h  KDTree.h
src/bucket_fps/: c_wrapper.cpp  ffi.rs  mod.rs
src/bucket_fps/_ext/: Interval.h  KDLineTree.h  KDNode.h  KDTree.h  KDTreeBase.h  Point.h  utils.h
src/fpsample/: __init__.py
src/kdtree_fps/: line_tree.rs  mod.rs  node.rs  point.rs  tree_base.rs
