[package]
name = "fpsample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fpsample"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
numpy = "0.19"
