[package]
name = "fpsample"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fpsample"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
numpy = "0.19"
kdtree = "0.7"
cty = "0.2"

[build-dependencies]
cc = "1.0"
