[build-system]
requires = ["maturin>=1.2,<2.0", "patchelf>=0.17"]
build-backend = "maturin"

[project]
name = "fpsample"
version = "0.3.2"
authors = [{ name = "Leonard Lin", email = "leonard.keilin@gmail.com" }]
keyword = [
    "sampling",
    "farthest point sampling",
    "furthest point sampling",
    "point cloud",
]
description = "An efficient CPU implementation of farthest point sampling (FPS) for point clouds."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["numpy>=1.16.0"]

[project.urls]
Repository = "https://github.com/leonardodalinky/fpsample"
Tracker = "https://github.com/leonardodalinky/fpsample/issues"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
