[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=2.6"]
build-backend = "scikit_build_core.build"

[project]
name = "fpsample"
version = "1.0.2"
authors = [
    { name = "Leonard Lin", email = "leonard.keilin@gmail.com" },
    { name = "guch8017", email = "guch8017@gmail.com" }
]
description = "An efficient CPU implementation of farthest point sampling (FPS) for point clouds."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "numpy>=1.16.0",
    "pybind11>=2.6",
]

[project.urls]
Repository = "https://github.com/leonardodalinky/fpsample"
Tracker = "https://github.com/leonardodalinky/fpsample/issues"

[dependency-groups]
test = ["pytest"]
dev = [
    { include-group = "test" },
    "jupyterlab>=4.3.8",
    "pytest-benchmark>=4.0.0",
]


[tool.scikit-build]
minimum-version = "build-system.requires"
